# py-csi-cobotics

./: .gitignore  LICENSE.md  README.md  fuzzy_temporal_logic-0.0.3-py3-none-any.whl  pyproject.toml  requirements.txt
containers/twin/tcx/: Dockerfile  entrypoint.sh
csi/: __init__.py  configuration.py  coverage.py  experiment.py  monitor.py  safety.py  transform.py
csi/safety/: __init__.py  stpa.py
csi/scenarios/tcx/: __init__.py  configuration.py
csi/situation/: __init__.py  components.py  coverage.py  domain.py  helpers.py  monitoring.py
csi/twin/: __init__.py  configuration.py  converter.py  importer.py  orm.py  runner.py
experiments-safecomp2021/search/search-ga/: runner.py
experiments-safecomp2021/search/search-qd/: runner.py  (+4 more)
experiments/gcc_tutorial/: README.md
experiments/safecomp-revised/: dev.py  merge_coverage.py  reprocess_run.py  search_qd.py  search_ran.py  serialisation_dataset.py
experiments/safety-controller/: manual_run.py  random_run.py  replay_run.py  reprocess_run.py  run_statistics.py
experiments/search/: fitness.py
experiments/search-ga/: runner.py
experiments/search-qd/: runner.py
experiments/tcx/: __init__.py  configuration.py  runner.py
experiments/tcx-safety/: replay_run.py  reprocess_run.py  search_ran.py
experiments/tcx-validation/: jsonify_trace.py  run_statistics.py
experiments/tcx_safety/: README.md  replay_run.py  reprocess_run.py  search_qd.py  search_ran.py  serialisation_dataset.py
experiments/tcx_validation/: jsonify_trace.py  manual_run.py  random_run.py  replay_run.py  reprocess_run.py  run_statistics.py
scenarios/tcx/: __init__.py  configuration.py  monitor.py  runner.py
tests/: test_configuration.py  test_coverage.py  test_csi.py  test_monitor.py  test_orm.py  test_transform.py
tests/fixtures/: csi.db  csi.json
tests/safety/: common.py  test_hazards.py  test_ucas.py
(+62 files in other folders)
