[tool.poetry]
name = "py-csi-cobotics"
readme="README.md"
version = "0.1.0"
description = "A Python framework for controlling and processing experiments built upon the CSI:Cobot Digital Twin"
authors = ["Gaudeval <bl778@york.ac.uk>"]
# TODO Add licence
# TODO Add homepage and repository links
packages = [
    { include = "csi" },
]

[tool.poetry.dependencies]
python = "^3.9"
dataset = "^1.5.0"
geneticalgorithm = "^1.0.2"
jsonpath2 = "^0.4.4"
metric-temporal-fuzzy-logic = "^0.0.6"
qdpy = "^0.1.2"
tqdm = "^4.62.3"
traces = "^0.6.0"
docker = "^5.0.3"
drs = "^2.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
# code quality
black = "^21.10b0"
pytest = "^6.2.5"
pytest-enabler = "^1.2.1"
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-sugar = "^0.9.2"
pytest-mypy = "^0.8.1"
# tcx container dependencies
Flask = "^2.0.2"
kinpy = "^0.1.0"

[pytest.enabler.mypy]
addopts = "--mypy"

[pytest.enabler.flake8]
addopts = "--flake8"

[pytest.enabler.cov]
addopts = "--cov"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
